test/should-fail/jfxc1442sub.fx
/**
 * @subtest
 */

public var pub = 0;
readable var read = 2;
var myvar = 4;
